<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setup_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.challenge.camera2label.SetupActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <LinearLayout
        android:id="@+id/printer_options_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        app:layout_constraintVertical_bias="0"
        tools:layout_editor_absoluteX="10dp">

        <LinearLayout
            android:id="@+id/printable_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/preview_options"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:rotation="90">

                <Button
                    android:id="@+id/preview_save_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/preview_save_button" />

                <Button
                    android:id="@+id/preview_edit_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/preview_edit_button" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/preview_last_scanned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

            <TextView
                android:id="@+id/tap_to_print_preview_hint"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:rotation="90"
                android:text="@string/tap_preview_to_print_text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/printer_selector_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/printer_selection_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            </RadioGroup>
        </LinearLayout>

        <TextView
            android:id="@+id/usb_to_preview_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tap_usb_to_preview_text" />

        <LinearLayout
            android:id="@+id/connection_selector_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/connection_selection_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/paper_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_option_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:visibility="visible" />

            <RadioButton
                android:id="@+id/radio_option_roll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:visibility="visible" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/scan_button_layout"
        style="?metaButtonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal|center_vertical"
        android:background="@color/black_overlay"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/printer_scanner_license_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/menu_pdf"
            android:text="@string/printer_scanner_license_button"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/printer_scanner_qr_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/menu_qr"
            android:text="@string/printer_scanner_qr_button"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/printer_scanner_ocr_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/menu_label"
            android:text="@string/printer_scanner_ocr_button"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/printer_scanner_picture_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/printer_scanner_picture_button"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/printer_scan_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/printer_scan_button"
            android:textColor="@android:color/white" />

    </LinearLayout>

</FrameLayout>